--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,4 @@ __pycache__/
 
 # будут игнорироваться все файлы и каталоги с расширением .txt
 # вне зависимости от того, в каком каталоге они находятся
-# file.txt
-token.txt
+*.txt
